<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/category_nfc_reader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.ntkduy1604.airflitedevicemanager.CategoryNfcReader">

        <TextView
            style="@style/HeaderText"
            android:text="@string/intro_message" />

        <TextView
            android:id="@+id/instruction"
            style="@style/HeaderText"
            android:text="@string/instruction" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fadingEdge="vertical"
                android:orientation="vertical">

                <TextView
                    style="@style/DataDisplay"
                    android:text="@string/nfc_scanned_tag_id" />

                <TextView
                    style="@style/DataDisplay"
                    android:text="@string/nfc_scanned_name" />

                <TextView
                    style="@style/DataDisplay"
                    android:text="@string/nfc_scanned_model" />

                <TextView
                    style="@style/DataDisplay"
                    android:layout_height="50dp"
                    android:text="@string/nfc_scanned_serial_no" />

                <TextView
                    style="@style/DataDisplay"
                    android:text="@string/nfc_scanned_active_date" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fadingEdge="vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nfc_scanned_tag_id_tv"
                    style="@style/DataDisplay"
                    android:text="@string/nfc_scanned_tag_id_tv_default" />

                <TextView
                    android:id="@+id/nfc_scanned_name_tv"
                    style="@style/DataDisplay"
                    android:text="@string/nfc_scanned_name_tv_default" />

                <TextView
                    android:id="@+id/nfc_scanned_model_tv"
                    style="@style/DataDisplay"
                    android:text="@string/nfc_scanned_model_tv_default" />

                <TextView
                    android:id="@+id/nfc_scanned_serial_no_tv"
                    style="@style/DataDisplay"
                    android:layout_height="50dp"
                    android:text="@string/nfc_scanned_serial_no_tv_default" />

                <TextView
                    android:id="@+id/nfc_scaned_activate_date_tv"
                    style="@style/DataDisplay"
                    android:text="@string/nfc_scanned_activate_date_tv_default" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nfc_on_off_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/nfc_enable"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/contact_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/contact_detail"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
